--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-google-generativeai
-langchain
-pandas
-python-dotenv
+streamlit==1.46.1
+google-generativeai==0.8.5
+langchain==0.3.26
+pandas==2.3.0
+python-dotenv==1.1.1
